--- a/README
+++ b/README
@@ -7,7 +7,7 @@ written by Athanasios N. Nikolakopoulos, Vassilis Kalantzis, and John D. Garofal
 -----------------------------------------------------------------------------
                                    EIGENREC
    
-      Copyright (C) 2017 Vassilis Kalantzis, Athanasios Nikolakopoulos
+      Copyright (C) 2017 Vassilis Kalantzis, Athanasios N. Nikolakopoulos
 -----------------------------------------------------------------------------
  
 This file is part of EIGENREC.
@@ -90,7 +90,7 @@ Primary developers (in alphabetical order):
 
 1) Vassilis Kalantzis,    kalan019@umn.edu
 
-2) Thanos Nikolakopoulos, anikolak@umn.edu
+2) Athanasios N. Nikolakopoulos, anikolak@umn.edu
 
 For any questions or bug reports, please contact
 any of the developers listed above.
