--- a/Fortran_MPI/README
+++ b/Fortran_MPI/README
@@ -91,6 +91,7 @@ Primary developers (in alphabetical order):
 1) Vassilis Kalantzis,    kalan019@umn.edu
 
 2) Athanasios N. Nikolakopoulos, anikolak@umn.edu
+Digital Technology Center, University of Minnesota
 
 For any questions or bug reports, please contact
 any of the developers listed above.
